<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saludo"
            android:textSize="24dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            >

        </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej1"
            android:textSize="18dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej2"
            android:textSize="18dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            >

        </TextView>

    </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>