<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoj1"
                android:fontFamily="sans-serif"
                android:background="@color/cabeza"
                android:textSize="24dp"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="18dp"
                >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parciales"
                android:fontFamily="sans-serif-black"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_marginTop="18dp"
                />

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

               <EditText
                   android:id="@+id/etnota1"
                   android:layout_marginRight="8dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="Parcial 1"
                   android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/etnota2"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Parcial 2"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/etnota3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Parcial 3"
                    android:inputType="numberDecimal"/>

                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/efinal"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginTop="18dp"
                />

            <EditText
                android:id="@+id/etnota4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Examen final"
                android:inputType="numberDecimal"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eaula"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginTop="18dp"
                />

            <EditText
                android:id="@+id/etnota5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Actividad"
                android:inputType="numberDecimal"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:textAlignment="center">

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:background="@color/btn"
                    android:text="Calcular nota"/>


                <Button
                    android:id="@+id/btnNuevo"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="8sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:background="@color/btn"
                    android:text="Nuevo"/>



            </LinearLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="32dp"
                />

            <TextView
                android:id="@+id/tvresultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                />

            </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>